# tree-sitter-buck2-v2

./: .gitmodules  BUCK  use.c  use.rs
4th-party/: BUCK
rules/: buildscript.bzl  dicts.bzl  iterable.bzl  new_sets.bzl  rust_third_party.bzl  type_defs.bzl
toolchains/: BUCK
tree-sitter-balanced/: BUCK  Cargo.toml  binding.gyp  grammar.js  package.json
tree-sitter-balanced/bindings/node/: binding.cc  index.js
tree-sitter-balanced/bindings/rust/: lib.rs
tree-sitter-balanced/src/: grammar.json  node-types.json  parser.c
